TES-P8-mpvpn0qu: P008 day3 finalize lock release integration tests [2026-05-29]